--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,209 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~ag-grid-community/dist/styles/ag-grid.css";
+@import "~ag-grid-community/dist/styles/ag-theme-balham.css";
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.cdk-overlay-dark-backdrop {
+  background: rgb(255 255 255 / 85%);
+}
+
+.contentHolder {
+  padding-top: 30px;
+  padding-bottom: 60px;
+  color: black;
+}
+
+mat-option {
+  background-color: white;
+  color: #2d2d2d !important;
+
+  &.mat-active {
+    background-color: #a80092 !important;
+    color: white !important;
+
+    &:hover {
+      background-color: #a80092 !important;
+      color: white !important;
+    }
+  }
+
+  &:hover {
+    background-color: rgb(255 229 251) !important;
+    color: #2f2f2f !important;
+  }
+}
+
+.ag-theme-balham .ag-header {
+  background-color: rgb(221 160 221 / 40%)
+}
+
+.ag-header-cell-label {
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(95 0 95);
+}
+
+.ag-theme-balham .ag-cell,
+.ag-theme-balham .ag-full-width-row .ag-cell-wrapper.ag-row-group {
+  line-height: 45px;
+  font-size: 14px;
+}
+
+span.ag-overlay-no-rows-center {
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+button.editItem.tableAction {
+  color: #2c9500;
+  background-color: transparent;
+}
+
+button.deleteItem.tableAction {
+  color: #c70000;
+  background-color: transparent;
+}
+
+.alignCenterHeader {
+  .ag-header-cell-label {
+    justify-content: center;
+  }
+}
+
+.ag-row-odd {
+  background-color: #fcfcfc !important;
+}
+
+.ag-row-hover {
+  background-color: rgb(33 150 234 / 10%) !important;
+}
+
+snack-bar-container {
+  background-color: #4da901 !important;
+  color: white !important;
+}
+
+.filterEmoji {
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  z-index: 999;
+  text-align: center;
+  background-color: rgb(255 255 255 / 85%);
+  padding-top: calc((100vh - 420px) / 2);
+
+  emoji-mart {
+    width: 50vw;
+    max-width: 500px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    background-color: transparent !important;
+
+    .emoji-mart-category-label span {
+      background-color: #0f1246;
+      color: white;
+    }
+
+    span.emoji-mart-title-label {
+      color: white;
+    }
+
+    .emoji-mart-preview,
+    .emoji-mart-preview * {
+      color: white !important;
+    }
+
+    section.emoji-mart {
+      width: 100% !important;
+      background-color: #191f72 !important;
+      box-shadow: 1px 1px 8px 1px black;
+      border: 0;
+    }
+  }
+
+  button.closeEmoji {
+    position: absolute;
+    top: calc(((100vh - 420px) / 2) - 40px);
+    background-color: #191f72 !important;
+    color: white;
+    width: 30px !important;
+    height: 30px !important;
+    padding-top: 2px;
+
+    &:hover {
+      background-color: #0f1246 !important;
+    }
+  }
+
+  button.closeEmoji mat-icon {
+    vertical-align: top !important;
+  }
+}
+
+mat-card.mat-card {
+  height: 100%;
+
+  mat-card-title {
+    color: rgb(88 116 122 / 100%);
+    font-size: 20px;
+
+    mat-icon {
+      float: right;
+      color: rgb(0 0 0 / 70%);
+      font-size: 30px;
+      margin-right: 13px;
+    }
+  }
+
+  mat-card-subtitle {
+    font-size: 35px;
+    padding-top: 30px;
+    color: rgb(49 49 49 / 80%);
+  }
+
+  &.pieCard {
+    background: rgb(241 217 241 / 40%);
+  }
+
+  &.barCard {
+    background: rgb(241 217 241 / 40%);
+  }
+
+  &.vertical {
+    margin-bottom: 20px;
+    height: calc(100% - 20px);
+  }
+
+  &.bottomCards {
+    margin-top: 25px;
+  }
+}
+
+.h100 {
+  height: 100%;
+}
+
+.blockDiv {
+  display: block
+}
+
+mat-label.noDataMessage {
+  color: #5a7172;
+  font-size: 20px;
+  text-align: center;
+  display: block;
+  padding-top: 20px;
+}
