fixes & adding translations

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -2,7 +2,7 @@
   <button class="menuNavButton" mat-flat-button color="primary" (click)="toggleDrawer()">
     <mat-icon>menu</mat-icon>
   </button>
-  <h1>{{'SectorsFeelings'| translate}}</h1>
+  <h1>{{'SectorsFeelingsTitle'| translate}}</h1>
   <div class="headerAccountSection float-right">
     <div class="changeLangHolder">
       <mat-form-field appearance="fill">
