--- a/src/app/pages/feelings-table/feelings-table.component.scss
+++ b/src/app/pages/feelings-table/feelings-table.component.scss
@@ -38,6 +38,7 @@
 
   .container {
     height: 100%;
+    margin-right: 0;
 
     .row {
       height: 100%;
@@ -89,7 +90,7 @@
 
       .leftSide {
         height: 100%;
-        padding: 50px 30px 30px;
+        padding: 50px 20px 30px;
         position: relative;
 
         h1 {
