--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,7 +1,10 @@
 .headerHolder {
   background-color: #191f72;
   height: 70px;
-
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+  
   .menuNavButton {
     height: 100%;
     border-radius: 0;
@@ -13,6 +16,7 @@
     vertical-align: middle;
     margin: 0 20px;
     color: white !important;
+    font-family: adamBold;
   }
 }
 
@@ -48,7 +52,7 @@
 
     .mat-form-field-wrapper {
       padding-bottom: 0;
-      background-color: #3f46a3;
+      background-color: rgb(63 70 163 / 40%);
       height: 42px;
 
       .mat-select-value-text {
