adding footer with some fixes

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="headerHolder">
+<div class="headerHolder indigo darken-3">
   <button class="menuNavButton" mat-flat-button color="primary" (click)="toggleDrawer()">
     <mat-icon>menu</mat-icon>
   </button>
