--- a/src/app/layout/side-nav/side-nav.component.html
+++ b/src/app/layout/side-nav/side-nav.component.html
@@ -10,5 +10,6 @@
   <mat-sidenav-content>
     <app-header (navToggle)="toggleDrawer($event)"></app-header>
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
