--- a/src/app/shared/components/table-filter/table-filter.component.html
+++ b/src/app/shared/components/table-filter/table-filter.component.html
@@ -8,7 +8,7 @@
     <input matInput formControlName="filterField" #filterField>
     <button matSuffix mat-icon-button (click)="showFilterEmojiList()" type="button" class="emojiButton"
       matTooltip="Open Emoji tab" matTooltipClass="normativeTooltip" [matTooltipPosition]="position.value">
-      <mat-icon>🙂</mat-icon>
+      <mat-icon>sentiment_satisfied_alt</mat-icon>
     </button>
     <button matSuffix mat-icon-button (click)="clearFilter()" type="button" matTooltip="Cancel filter"
       matTooltipClass="normativeTooltip" [matTooltipPosition]="position.value">
